<resources>
    <string name="app_name">Demo My Second App</string>
    <string name="welcome_to_android">Welcome to Android!</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="largetext">Large Text</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">CANCEL</string>
    <string name="registraton_form">Registraton Form</string>
    <string name="welcome_to_adventure_learning_club">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">REGISTER</string>
    <string name="school">School</string>
</resources>